refactor(NodeLibraryComponent): 优化子类别获取逻辑
- 将 children.get(0) 替换为 children.getFirst() 提高代码可读性
- 保持原有的单一子类别提升功能不变
- 使用更语义化的方法调用增强代码维护性